[package]
name = "pallet-did"
version = "0.0.1"
authors = ["Vivek Pandya <vivekvpandya@gmail.com>"]
edition = "2018"
homepage = ""
repository = ""
description = "Decentralized identifiers (DIDs) pallet."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
# sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
# sp-io = { version = "3.0.0", default-features = false, path = "../../primitives/io" }
# sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
# frame-benchmarking = { version = "3.0.0", default-features = false, path = "../benchmarking", optional = true }
# frame-support = { version = "3.0.0", default-features = false, path = "../support" }
# frame-system = { version = "3.0.0", default-features = false, path = "../system" }
# pallet-timestamp = { version = "3.0.0", default-features = false, path = "../../frame/timestamp" }
sp-std = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
sp-core = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
sp-io = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
sp-runtime = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
frame-benchmarking = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false, optional = true }
frame-support = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
frame-system = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
pallet-timestamp = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive",] }

[dev-dependencies]
# sp-core = { version = "3.0.0", path = "../../primitives/core" }
# pallet-balances = { version = "3.0.0", path = "../balances" }
sp-core = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git' }
pallet-balances = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]

